objects/WARP_Group_Contract__c.object
<CustomObject>
    <description>DEV_APPROVE
KF(20140318) No changes should be made to this object without Development Team Approval
KF(20130812) built to import straight WARP data as child of Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WARP Group Contracts</relationshipLabel>
        <relationshipName>WARP_Group_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActuarialFundingTypeName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActuarialProductName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actuarial Product Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuarial_Coverage_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Coverage is determined by the contingency that creates the benefits (e.g. Medical, Dental, Pharmacy).</inlineHelpText>
        <label>Actuarial Coverage ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuarial_Coverage_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actuarial Coverage Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuarial_Funding_Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describes the way a member&apos;s benefits are funded as defined by the Corporate Actuarial Reporting department.</inlineHelpText>
        <label>Actuarial Funding Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuarial_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identifies a product as defined by the Corporate Actuarial Reporting department.</inlineHelpText>
        <label>Actuarial Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actuarial_Product_Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A product type defines the structure of the services that are provided to Members (e.g. Preferred Provider Organization (PPO), Health Maintenance Organization (HMO)).</inlineHelpText>
        <label>Actuarial Product Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOM_Member_Count__c</fullName>
        <inlineHelpText>BOM-Beginning of Month</inlineHelpText>
        <label>BOM Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOM_Subscriber_Count__c</fullName>
        <inlineHelpText>BOM-Beginning of Month</inlineHelpText>
        <label>BOM Subscriber Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverage_Set_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The coverage set ID also known as contract code, identifies a grouping of benefits offered in the marketplace as a unit.</inlineHelpText>
        <label>Coverage Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set &quot;Y&quot; for current data out of WARP</inlineHelpText>
        <label>Current Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOM_Member_Count__c</fullName>
        <inlineHelpText>EOM-Beginning of Month</inlineHelpText>
        <label>EOM Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOM_Subscriber_Count__c</fullName>
        <inlineHelpText>EOM-Beginning of Month</inlineHelpText>
        <label>EOM Subscriber Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETLProcessDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ETL Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Line_of_Business_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Line of Business field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewCompanyCF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Company CF</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewFundTypeCF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Fund Type CF</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewMBU__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New MBU</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewProductCF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Product CF</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyholderID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policyholder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyholderName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policyholder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Delivery_System_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identifies the general method which benefits are delivered to members.</inlineHelpText>
        <label>Primary Delivery System Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductShortDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Short Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reporting Date of membership information, always the last day of the month</inlineHelpText>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceSystemCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A code that identifies the operational source that provided the data.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARPGroupNumberCMD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WARP Group Number CMD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WARPGroupNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WARP Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WARP Group Contract</label>
    <nameField>
        <displayFormat>WGCN-{00000000}</displayFormat>
        <label>WARP Group #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WARP Group Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>